[project]
name = "DashGraphApp"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "networkx >=3.1, <4",
  "lxml >=5.3, <6",
  "plotly >=6.0, <7",
  "numpy >=1.25, <2",
  "scipy >=1.15, <2",
  "pandas >=2.2, <3",
  "dash >=3.0, <4",
  "dash-bootstrap-components >=2.0, <3"
]

[project.scripts]
dash-serv = "DashGraphApp.src.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
